@startuml
title Tech-Stack Detector — Class Diagram

interface ScmProvider {
  + providerType() : String
  + listRepositories(config) : List<ScmRepository>
  + getFileContents(config, repoPath, filePath) : Optional<String>
  + getLastCommit(config, repo) : Optional<CommitInfo>
  + resolveOwnership(config, repo) : OwnershipMap
}

class GitHubProvider implements ScmProvider
class AzureDevOpsProvider implements ScmProvider

class TechStackDetector {
  + detect(provider, config, repo) : List<String>
  - detectFromDockerfile(content, stack) : void
  - safeGetFile(provider, config, repo, filePath) : Optional<String>
}

record ScmRepository {
  id : String
  name : String
  fullPath : String
  defaultBranch : String
  archived : boolean
  description : String?
  repositoryUrl : String?
}

record CommitInfo {
  committedAt : Instant
  sha : String
}

TechStackDetector ..> ScmProvider : calls getFileContents
ScmProvider ..> ScmRepository : returns
ScmProvider ..> CommitInfo : returns

@enduml
